# nezha

./: Cargo.toml  README.md  README.zh-CN.md
crates/nezha-archive/: Cargo.toml
crates/nezha-archive/src/: lib.rs
crates/nezha-compositor/: Cargo.toml
crates/nezha-compositor/src/: compositor.rs  layer.rs  lib.rs  solid_color.rs  solid_color.wgsl
crates/nezha-core/: Cargo.toml
crates/nezha-core/src/: error.rs  lib.rs  midi.rs  parser.rs  time.rs
crates/nezha-dms/: Cargo.toml
crates/nezha-dms/src/: converter.rs  lib.rs  model.rs  parser.rs
crates/nezha-egui/: Cargo.toml  build.rs
crates/nezha-egui/src/: app.rs  config_panel.rs  main.rs  piano_keyboard.rs  piano_view.rs  properties_panel.rs  sidebar.rs  transport.rs
crates/nezha-egui/src/app/: archive_picker.rs  export.rs  loading.rs  panels.rs  playback.rs  preview.rs  project_state.rs  render_context.rs  ui_state.rs
crates/nezha-egui/src/app/project_state/: midi_store.rs  playback_state.rs  render_settings.rs
crates/nezha-egui/src/app/render_context/: frame_encoder.rs  midi_cache.rs  preview_target.rs
crates/nezha-egui/src/config_panel/: export.rs  project.rs  settings.rs  style.rs
crates/nezha-egui/src/properties_panel/: common.rs  counter.rs  mod.rs  solid_color.rs  waterfall.rs
crates/nezha-egui/src/transport/: controller.rs  controls.rs  hit_test.rs  input.rs  layout.rs  model.rs  playhead.rs  ruler.rs  scrollbar.rs  theme.rs  timecode.rs  tracks.rs
crates/nezha-encoder/: Cargo.toml
crates/nezha-encoder/src/: config.rs  ffmpeg.rs  lib.rs
crates/nezha-renderer/: Cargo.toml  build.rs
crates/nezha-renderer/benches/: render_bench.rs
crates/nezha-renderer/examples/: profile.rs
crates/nezha-renderer/src/: compute.rs  compute_notes.wgsl  finalize_counts.wgsl  gpu_timer.rs  keyboard.rs  lib.rs  palette.rs  pipeline.rs  renderer.rs  shader.wgsl  source.rs  state.rs  style.rs  types.rs  vertex.rs
crates/nezha-renderer/src/renderer/: cache.rs  chunk.rs  frame.rs  mod.rs  pass.rs  scan.rs  upload.rs
crates/nezha-text/: Cargo.toml
crates/nezha-text/src/: atlas.rs  font.rs  lib.rs  text.wgsl  text_layer.rs
puffin/: Untitled.puffin
