[workspace]
members = ["crates/nezha-core", "crates/nezha-compositor", "crates/nezha-renderer", "crates/nezha-egui", "crates/nezha-archive", "crates/nezha-dms", "crates/nezha-encoder", "crates/nezha-text"]
resolver = "2"

[workspace.dependencies]
wgpu = "29.0.3"
eframe = { version = "0.34.2", features = ["wgpu"] }
egui = "0.34.2"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
puffin = "0.20"
