[package]
name = "nezha-egui"
version = "0.1.0"
edition = "2024"

[features]
profiling = ["nezha-renderer/profiling", "puffin", "puffin_http"]

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
wgpu = { workspace = true }
nezha-core = { path = "../nezha-core" }
nezha-compositor = { path = "../nezha-compositor" }
nezha-renderer = { path = "../nezha-renderer" }
nezha-archive = { path = "../nezha-archive" }
nezha-dms = { path = "../nezha-dms" }
nezha-encoder = { path = "../nezha-encoder" }
pollster = { workspace = true }
rfd = "0.17.2"
puffin = { workspace = true, optional = true }
puffin_http = { version = "0.17", optional = true }
