[package]
name = "nezha-renderer"
version = "0.1.0"
edition = "2024"

[features]
profiling = ["puffin"]

[dependencies]
wgpu = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
nezha-core = { path = "../nezha-core" }
puffin = { workspace = true, optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
puffin = { workspace = true }
puffin_http = "0.17"

[[bench]]
name = "render_bench"
harness = false

[[example]]
name = "profile"
required-features = ["profiling"]

[build-dependencies]
naga = { version = "29.0.3", features = ["wgsl-in"] }
