[package]
name = "nezha-renderer"
version = "0.1.0"
edition = "2024"

[features]
profiling = ["puffin"]

[dependencies]
wgpu = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
nezha-core = { path = "../nezha-core" }
half = "2.7.1"
rayon = "1.10.0"
puffin = { workspace = true, optional = true }

[build-dependencies]
naga = { version = "29.0.3", features = ["wgsl-in"] }
